--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "polymer": "Polymer/polymer#~0.5.3",
     "font-awesome": "~4.3.0",
-    "raphael": "~2.1.3"
+    "raphael": "~2.1.3",
+    "jwerty": "~0.3.2"
   }
 }
