--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,8 @@
     "polymer": "Polymer/polymer#~0.5.3",
     "font-awesome": "~4.3.0",
     "raphael": "~2.1.3",
-    "jwerty": "~0.3.2"
+    "jwerty": "~0.3.2",
+    "Snap.svg": "~0.3.0",
+    "snap.svg.zpd": "~0.0.8"
   }
 }
