--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "font-awesome": "~4.3.0",
     "raphael": "~2.1.3",
     "jwerty": "~0.3.2",
-    "Snap.svg": "~0.3.0"
+    "Snap.svg": "~0.3.0",
+    "pandora": "~0.0.2"
   }
 }
