--- a/bower.json
+++ b/bower.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "polymer": "Polymer/polymer#~0.5.3",
     "font-awesome": "~4.3.0",
-    "raphael": "~2.1.3",
     "jwerty": "~0.3.2",
     "Snap.svg": "~0.3.0",
-    "pandora": "~0.0.3"
+    "pandora": "~0.0.7",
+    "interact": "~1.2.4"
   }
 }
