--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "jwerty": "~0.3.2",
     "Snap.svg": "~0.3.0",
     "pandora": "~0.0.7",
-    "interact": "~1.2.4"
+    "interact": "~1.2.4",
+    "core-ajax": "Polymer/core-ajax#~0.5.5"
   }
 }
