Create group, style missing.

--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,8 @@
     "pandora": "~0.0.7",
     "interact": "~1.2.4",
     "core-ajax": "Polymer/core-ajax#~0.5.5",
-    "paper-toast": "Polymer/paper-toast#~0.5.5"
+    "paper-toast": "Polymer/paper-toast#~0.5.5",
+    "paper-dialog": "Polymer/paper-dialog#~0.5.5",
+    "paper-input": "Polymer/paper-input#~0.5.5"
   }
 }
