--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,9 @@
     "core-ajax": "Polymer/core-ajax#~0.5.5",
     "paper-toast": "Polymer/paper-toast#~0.5.5",
     "paper-dialog": "Polymer/paper-dialog#~0.5.5",
-    "paper-input": "Polymer/paper-input#~0.5.5"
+    "paper-input": "Polymer/paper-input#~0.5.5",
+    "core-header-panel": "Polymer/core-header-panel#~0.5.5",
+    "core-toolbar": "Polymer/core-toolbar#~0.5.5",
+    "paper-icon-button": "Polymer/paper-icon-button#~0.5.5"
   }
 }
