--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "paper-input": "Polymer/paper-input#~0.5.5",
     "core-header-panel": "Polymer/core-header-panel#~0.5.5",
     "core-toolbar": "Polymer/core-toolbar#~0.5.5",
-    "paper-icon-button": "Polymer/paper-icon-button#~0.5.5"
+    "paper-icon-button": "Polymer/paper-icon-button#~0.5.5",
+    "core-tooltip": "Polymer/core-tooltip#~0.5.5"
   }
 }
