--- a/bower.json
+++ b/bower.json
@@ -3,12 +3,11 @@
   "description": "Simple tool for visual programming.",
   "version": "0.0.1",
   "dependencies": {
+    "d3": "~3.5.5",
+    "jwerty": "~0.3.2",
+    "pandora": "~0.0.7",
     "polymer": "Polymer/polymer#~0.5.3",
     "font-awesome": "~4.3.0",
-    "jwerty": "~0.3.2",
-    "Snap.svg": "~0.3.0",
-    "pandora": "~0.0.7",
-    "interact": "~1.2.4",
     "core-ajax": "Polymer/core-ajax#~0.5.5",
     "paper-toast": "Polymer/paper-toast#~0.5.5",
     "paper-dialog": "Polymer/paper-dialog#~0.5.5",
@@ -16,7 +15,6 @@
     "core-header-panel": "Polymer/core-header-panel#~0.5.5",
     "core-toolbar": "Polymer/core-toolbar#~0.5.5",
     "paper-icon-button": "Polymer/paper-icon-button#~0.5.5",
-    "core-tooltip": "Polymer/core-tooltip#~0.5.5",
-    "d3": "~3.5.5"
+    "core-tooltip": "Polymer/core-tooltip#~0.5.5"
   }
 }
