Implement theme system globally.

--- a/themes/audigame/config.json
+++ b/themes/audigame/config.json
@@ -1,4 +1,10 @@
 {
+  "group": {
+    "borderRadius": 3
+  },
+  "block": {
+    "borderRadius": 3
+  },
   "background-grid": {
     "line": {
       "stroke": "rgba(0, 0, 0, 0.1)",
