--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "paper-dialog": "Polymer/paper-dialog#~0.5.5",
     "paper-input": "Polymer/paper-input#~0.5.5",
     "paper-icon-button": "Polymer/paper-icon-button#~0.5.5",
-    "dude-gui": "~0.0.4"
+    "dude-gui": "~0.0.5",
+    "core-style": "Polymer/core-style#~0.5.5"
   }
 }
