--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,10 @@
     "core-toolbar": "Polymer/core-toolbar#~0.5.5",
     "core-tooltip": "Polymer/core-tooltip#~0.5.5",
     "core-header-panel": "Polymer/core-header-panel#~0.5.5",
+    "core-dropdown-menu": "Polymer/core-dropdown-menu#~0.5.5",
+    "core-dropdown": "Polymer/core-dropdown#~0.5.5",
+    "core-menu": "Polymer/core-menu#~0.5.5",
+    "core-item": "Polymer/core-item#~0.5.5",
     "paper-toast": "Polymer/paper-toast#~0.5.5",
     "paper-dialog": "Polymer/paper-dialog#~0.5.5",
     "paper-input": "Polymer/paper-input#~0.5.5",
