--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "paper-icon-button": "Polymer/paper-icon-button#~0.5.5",
     "dude-gui": "~0.1.1",
     "paper-dropdown": "Polymer/paper-dropdown#~0.5.5",
-    "paper-dropdown-menu": "Polymer/paper-dropdown-menu#~0.5.5"
+    "paper-dropdown-menu": "Polymer/paper-dropdown-menu#~0.5.5",
+    "core-scaffold": "Polymer/core-scaffold#~0.5.5"
   }
 }
