--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "core-drawer-panel": "Polymer/core-drawer-panel#~0.5.5",
     "core-header-panel": "Polymer/core-header-panel#~0.5.5",
     "core-dropdown-menu": "Polymer/core-dropdown-menu#~0.5.5",
+    "core-collapse": "Polymer/core-collapse#~0.5.5",
     "core-dropdown": "Polymer/core-dropdown#~0.5.5",
     "core-menu": "Polymer/core-menu#~0.5.5",
     "core-item": "Polymer/core-item#~0.5.5",
@@ -23,6 +24,6 @@
     "paper-icon-button": "Polymer/paper-icon-button#~0.5.5",
     "paper-dropdown": "Polymer/paper-dropdown#~0.5.5",
     "paper-dropdown-menu": "Polymer/paper-dropdown-menu#~0.5.5",
-    "dude-gui": "~0.1.1"
+    "dude-gui": "~0.1.1",
   }
 }
