--- a/themes/dark/config.json
+++ b/themes/dark/config.json
@@ -1,4 +1,8 @@
 {
+  "group": { "borderRadius": 5 },
+  "action": { "borderRadius": 5 },
+  "picker": { "borderRadius": 20 },
+  "getter": { "borderRadius": 20 },
   "background-grid": {
     "line": {
       "stroke": "rgba(0, 0, 0, 0.1)",
