--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "paper-dropdown": "Polymer/paper-dropdown#~0.5.5",
     "paper-dropdown-menu": "Polymer/paper-dropdown-menu#~0.5.5",
     "paper-toggle-button": "Polymer/paper-toggle-button#~0.5.5",
-    "dude-gui": "~0.1.5"
+    "dude-gui": "~0.1.5",
+    "core-drag-drop": "Polymer/core-drag-drop#~0.5.5"
   }
 }
