--- a/bower.json
+++ b/bower.json
@@ -1,31 +1,48 @@
 {
-  "name": "CodeGraph",
-  "description": "Simple tool for visual programming.",
+  "name": "codegraph",
+  "main": "codegraph.js",
   "version": "0.0.1",
+  "homepage": "https://github.com/dudeteam/CodeGraph",
+  "authors": [
+    "Jeremie Taboada <taboada.jeremie@gmail.com>",
+    "Jonathan Picques <jonathan.picques@gmail.com>"
+  ],
+  "keywords": [
+    "code",
+    "graph",
+    "blueprint",
+    "node",
+    "editor",
+    "graphnode"
+  ],
+  "license": "MIT",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "../",
+    "test",
+    "tests"
+  ],
   "dependencies": {
-    "d3": "~3.5.5",
-    "jwerty": "~0.3.2",
-    "pandora": "~0.0.10",
-    "polymer": "Polymer/polymer#~0.5.3",
-    "core-ajax": "Polymer/core-ajax#~0.5.5",
-    "core-style": "Polymer/core-style#~0.5.5",
-    "core-toolbar": "Polymer/core-toolbar#~0.5.5",
-    "core-tooltip": "Polymer/core-tooltip#~0.5.5",
-    "core-drawer-panel": "Polymer/core-drawer-panel#~0.5.5",
-    "core-header-panel": "Polymer/core-header-panel#~0.5.5",
-    "core-dropdown-menu": "Polymer/core-dropdown-menu#~0.5.5",
     "core-collapse": "Polymer/core-collapse#~0.5.5",
-    "core-dropdown": "Polymer/core-dropdown#~0.5.5",
-    "core-menu": "Polymer/core-menu#~0.5.5",
-    "core-item": "Polymer/core-item#~0.5.5",
-    "paper-toast": "Polymer/paper-toast#~0.5.5",
-    "paper-dialog": "Polymer/paper-dialog#~0.5.5",
-    "paper-input": "Polymer/paper-input#~0.5.5",
-    "paper-icon-button": "Polymer/paper-icon-button#~0.5.5",
-    "paper-dropdown": "Polymer/paper-dropdown#~0.5.5",
-    "paper-dropdown-menu": "Polymer/paper-dropdown-menu#~0.5.5",
-    "paper-toggle-button": "Polymer/paper-toggle-button#~0.5.5",
+    "core-ajax": "Polymer/core-ajax#~0.5.5",
+    "core-animation": "Polymer/core-animation#^0.5",
+    "core-dropdown-menu": "Polymer/core-dropdown-menu#~0.5.5",
+    "core-drawer-panel": "Polymer/core-drawer-panel#~0.5.5",
+    "core-drag-drop": "Polymer/core-drag-drop#~0.5.5",
+    "core-header-panel": "Polymer/core-header-panel#~0.5.5",
+    "core-input": "Polymer/core-input#^0.5",
+    "core-scaffold": "Polymer/core-scaffold#~0.5.5",
+    "core-style": "Polymer/core-style#~0.5.5",
+    "core-splitter": "Polymer/core-splitter#~0.5.5",
+    "d3": "~3.5.5",
+    "core-tooltip": "Polymer/core-tooltip#~0.5.5",
     "dude-gui": "~0.1.5",
-    "core-drag-drop": "Polymer/core-drag-drop#~0.5.5"
+    "paper-dialog": "Polymer/paper-dialog#~0.5.5",
+    "paper-dropdown-menu": "Polymer/paper-dropdown-menu#~0.5.5",
+    "paper-input": "Polymer/paper-input#~0.5.5",
+    "paper-toast": "Polymer/paper-toast#~0.5.5",
+    "paper-toggle-button": "Polymer/paper-toggle-button#~0.5.5"
   }
 }
