--- a/bower.json
+++ b/bower.json
@@ -24,25 +24,7 @@
     "test",
     "tests"
   ],
-  "dependencies": {
-    "core-collapse": "Polymer/core-collapse#~0.5.5",
-    "core-ajax": "Polymer/core-ajax#~0.5.5",
-    "core-animation": "Polymer/core-animation#^0.5",
-    "core-dropdown-menu": "Polymer/core-dropdown-menu#~0.5.5",
-    "core-drawer-panel": "Polymer/core-drawer-panel#~0.5.5",
-    "core-drag-drop": "Polymer/core-drag-drop#~0.5.5",
-    "core-header-panel": "Polymer/core-header-panel#~0.5.5",
-    "core-input": "Polymer/core-input#^0.5",
-    "core-scaffold": "Polymer/core-scaffold#~0.5.5",
-    "core-style": "Polymer/core-style#~0.5.5",
-    "core-splitter": "Polymer/core-splitter#~0.5.5",
-    "d3": "~3.5.5",
-    "core-tooltip": "Polymer/core-tooltip#~0.5.5",
-    "dude-gui": "~0.1.9",
-    "paper-dialog": "Polymer/paper-dialog#~0.5.5",
-    "paper-dropdown-menu": "Polymer/paper-dropdown-menu#~0.5.5",
-    "paper-input": "Polymer/paper-input#~0.5.5",
-    "paper-toast": "Polymer/paper-toast#~0.5.5",
-    "paper-toggle-button": "Polymer/paper-toggle-button#~0.5.5"
+  "devDependencies": {
+    "pandora": "~0.0.10"
   }
 }
