--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,11 @@
   ],
   "dependencies": {
     "pandora": "~0.0.11",
-    "d3": "~3.5.6"
+    "d3": "~3.5.6",
+    "polymer": "Polymer/polymer#^1.0.0"
+  },
+  "devDependencies": {
+    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
+    "web-component-tester": "*"
   }
 }
