--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.11.2",
     "gulp-mocha": "^2.1.2",
+    "gulp-shell": "^0.4.2",
     "gulp-uglify": "^1.2.0"
   }
 }
