--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "pandora": "~0.0.11",
     "d3": "~3.5.6",
-    "polymer": "Polymer/polymer#^1.0.0"
+    "polymer": "Polymer/polymer#^1.0.0",
+    "paper-fab": "PolymerElements/paper-fab#~1.0.3"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
