--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "pandora": "~0.0.11",
     "d3": "~3.5.6",
     "polymer": "Polymer/polymer#^1.0.0",
-    "paper-fab": "PolymerElements/paper-fab#~1.0.3"
+    "paper-fab": "PolymerElements/paper-fab#~1.0.3",
+    "magnet-hierarchy": "~0.0.3"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
