--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "d3": "~3.5.6",
     "polymer": "Polymer/polymer#^1.0.0",
     "paper-fab": "PolymerElements/paper-fab#~1.0.3",
-    "magnet-hierarchy": "~0.0.3"
+    "magnet-hierarchy": "~0.0.3",
+    "paper-button": "PolymerElements/paper-button#~1.0.3"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
