--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,10 @@
     "polymer": "Polymer/polymer#^1.0.0",
     "paper-fab": "PolymerElements/paper-fab#~1.0.3",
     "magnet-hierarchy": "~0.0.3",
-    "paper-button": "PolymerElements/paper-button#~1.0.3"
+    "paper-button": "PolymerElements/paper-button#~1.0.3",
+    "paper-input": "PolymerElements/paper-input#~1.0.10",
+    "paper-checkbox": "PolymerElements/paper-checkbox#~1.0.5",
+    "iron-input": "PolymerElements/iron-input#~1.0.4"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
