--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
     "paper-button": "PolymerElements/paper-button#~1.0.3",
     "paper-input": "PolymerElements/paper-input#~1.0.10",
     "paper-checkbox": "PolymerElements/paper-checkbox#~1.0.5",
-    "iron-input": "PolymerElements/iron-input#~1.0.4"
+    "iron-input": "PolymerElements/iron-input#~1.0.4",
+    "magnet-state": "*"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
