Handle several blocks in DudeSaver.

--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,8 @@
     "paper-input": "PolymerElements/paper-input#~1.0.10",
     "paper-checkbox": "PolymerElements/paper-checkbox#~1.0.5",
     "iron-input": "PolymerElements/iron-input#~1.0.4",
-    "magnet-state": "*"
+    "magnet-state": "*",
+    "paper-dialog": "PolymerElements/paper-dialog#~1.0.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
