Show errors in toast.

--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,8 @@
     "paper-checkbox": "PolymerElements/paper-checkbox#~1.0.5",
     "iron-input": "PolymerElements/iron-input#~1.0.4",
     "magnet-state": "*",
-    "paper-dialog": "PolymerElements/paper-dialog#~1.0.1"
+    "paper-dialog": "PolymerElements/paper-dialog#~1.0.1",
+    "paper-toast": "PolymerElements/paper-toast#~1.0.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
