--- a/bower.json
+++ b/bower.json
@@ -36,7 +36,10 @@
     "iron-input": "PolymerElements/iron-input#~1.0.4",
     "magnet-state": "*",
     "paper-dialog": "PolymerElements/paper-dialog#~1.0.1",
-    "paper-toast": "PolymerElements/paper-toast#~1.0.0"
+    "paper-toast": "PolymerElements/paper-toast#~1.0.0",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.0.1",
+    "paper-menu": "PolymerElements/paper-menu#~1.1.0",
+    "paper-item": "PolymerElements/paper-item#~1.0.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
