--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,12 @@
 {
   "name": "codegraph",
-  "main": "codegraph.js",
   "version": "0.0.9",
-  "homepage": "https://github.com/dudeteam/CodeGraph",
+  "description": "Generic tool to visually represent a graph of connected blocks. It can be used for unreal-like blueprints, state machines, etc..",
+  "main": "codegraph.js",
+  "homepage": "https://github.com/dudeteam/codegraph",
   "authors": [
-    "Jeremie Taboada <taboada.jeremie@gmail.com>",
-    "Jonathan Picques <jonathan.picques@gmail.com>"
+    "Jonathan Picques <jonathan.picques@gmail.com>",
+    "Jeremie Taboada <taboada.jeremie@gmail.com>"
   ],
   "keywords": [
     "code",
@@ -17,29 +18,27 @@
   ],
   "license": "MIT",
   "ignore": [
-    "**/.*",
-    "node_modules",
     "bower_components",
-    "../",
-    "test",
-    "tests"
+    "node_modules",
+    "tests",
+    "demo"
   ],
   "dependencies": {
-    "pandora": "~0.0.11",
     "d3": "~3.5.6",
+    "pandora": "~0.0.11",
     "polymer": "Polymer/polymer#^1.0.0",
-    "paper-fab": "PolymerElements/paper-fab#~1.0.3",
-    "magnet-hierarchy": "~0.0.4",
-    "paper-button": "PolymerElements/paper-button#~1.0.3",
-    "paper-input": "PolymerElements/paper-input#~1.0.10",
-    "paper-checkbox": "PolymerElements/paper-checkbox#~1.0.5",
-    "iron-input": "PolymerElements/iron-input#~1.0.4",
     "magnet-state": "*",
-    "paper-dialog": "PolymerElements/paper-dialog#~1.0.1",
-    "paper-toast": "PolymerElements/paper-toast#~1.0.0",
-    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.0.1",
+    "magnet-hierarchy": "~0.0.4",
+    "iron-input": "PolymerElements/iron-input#~1.0.4",
+    "paper-fab": "PolymerElements/paper-fab#~1.0.3",
+    "paper-item": "PolymerElements/paper-item#~1.0.2",
     "paper-menu": "PolymerElements/paper-menu#~1.1.0",
-    "paper-item": "PolymerElements/paper-item#~1.0.2"
+    "paper-input": "PolymerElements/paper-input#~1.0.10",
+    "paper-toast": "PolymerElements/paper-toast#~1.0.0",
+    "paper-button": "PolymerElements/paper-button#~1.0.3",
+    "paper-dialog": "PolymerElements/paper-dialog#~1.0.1",
+    "paper-checkbox": "PolymerElements/paper-checkbox#~1.0.5",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.0.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
