--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "codegraph",
   "version": "0.0.0",
-  "description": "",
+  "description": "Generic tool to visually represent a graph of connected blocks. It can be used for unreal-like blueprints, state machines, etc..",
   "main": "gulpfile.js",
-  "directories": {
-    "test": "tests"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "author": "Jeremie Taboada <taboada.jeremie@gmail.com> - Jonathan Picques <jonathan.picques@gmail.com>",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/dudeteam/codegraph.git"
   },
-  "author": "",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/dudeteam/codegraph/issues"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "directories": {
+    "test": "tests"
   },
   "devDependencies": {
     "bower": "^1.4.1",
