--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codegraph",
+  "name": "dude-graph",
   "version": "0.1.1",
   "description": "Generic tool to visually represent a graph of connected blocks. It can be used for unreal-like blueprints, state machines, etc..",
   "main": "gulpfile.js",
@@ -20,11 +20,9 @@
   },
   "devDependencies": {
     "bower": "^1.4.1",
-    "chai": "^3.1.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.11.2",
-    "gulp-mocha": "^2.1.2",
     "gulp-shell": "^0.4.2",
     "gulp-uglify": "^1.2.0"
   }
