--- a/bower.json
+++ b/bower.json
@@ -43,7 +43,8 @@
     "paper-button": "PolymerElements/paper-button#~1.0.3",
     "paper-dialog": "PolymerElements/paper-dialog#~1.0.1",
     "paper-checkbox": "PolymerElements/paper-checkbox#~1.0.5",
-    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.0.1"
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.0.1",
+    "dude-style": "*"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
