Replaced magnet-hierarchy to dude-hierarchy

--- a/bower.json
+++ b/bower.json
@@ -32,8 +32,8 @@
     "lodash": "~3.10.1",
     "pandora": "~0.0.11",
     "polymer": "Polymer/polymer#^1.0.0",
+    "dude-hierarchy": "~0.0.4",
     "magnet-state": "*",
-    "magnet-hierarchy": "~0.0.4",
     "iron-input": "PolymerElements/iron-input#~1.0.4",
     "paper-fab": "PolymerElements/paper-fab#~1.0.3",
     "paper-item": "PolymerElements/paper-item#~1.0.2",
