--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,7 @@
     "pandora": "~0.0.11",
     "polymer": "Polymer/polymer#^1.0.0",
     "dude-hierarchy": "~0.0.4",
+    "iron-pages": "PolymerElements/iron-pages#~1.0.3",
     "iron-input": "PolymerElements/iron-input#~1.0.4",
     "paper-fab": "PolymerElements/paper-fab#~1.0.3",
     "paper-item": "PolymerElements/paper-item#~1.0.2",
