--- a/package.json
+++ b/package.json
@@ -19,15 +19,13 @@
     "test": "tests"
   },
   "devDependencies": {
-    "bower": "^1.4.1",
+    "bower": "^1.5.3",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.11.2",
-    "gulp-shell": "^0.4.2",
-    "gulp-uglify": "^1.2.0"
-  },
-  "dependencies": {
     "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.0.1"
+    "gulp-plumber": "^1.0.1",
+    "gulp-shell": "^0.5.0",
+    "gulp-uglify": "^1.4.2"
   }
 }
