--- a/bower.json
+++ b/bower.json
@@ -31,18 +31,11 @@
     "d3": "~3.5.6",
     "lodash": "~3.10.1",
     "pandora": "~0.0.11",
+    "font-awesome": "~4.4.0",
     "polymer": "Polymer/polymer#^1.0.0",
-    "iron-pages": "PolymerElements/iron-pages#~1.0.3",
     "iron-input": "PolymerElements/iron-input#~1.0.4",
-    "paper-fab": "PolymerElements/paper-fab#~1.0.3",
-    "paper-item": "PolymerElements/paper-item#~1.0.2",
-    "paper-menu": "PolymerElements/paper-menu#~1.1.0",
     "paper-input": "PolymerElements/paper-input#~1.0.10",
-    "paper-toast": "PolymerElements/paper-toast#~1.0.0",
     "paper-button": "PolymerElements/paper-button#~1.0.3",
-    "paper-dialog": "PolymerElements/paper-dialog#~1.0.1",
-    "paper-checkbox": "PolymerElements/paper-checkbox#~1.0.5",
-    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.0.1",
     "dude-style": "~0.0.1",
     "dude-property": "~0.0.4",
     "dude-collapse": "~0.0.2",
