--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bower": "^1.6.2",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-jsdoc": "^0.1.5",
     "gulp-jshint": "^1.11.2",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
