--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   "devDependencies": {
     "bower": "^1.6.2",
     "gulp": "^3.9.0",
+    "gulp-shell": "^0.5.0",
+    "gulp-uglify": "^1.4.2",
     "gulp-concat": "^2.6.0",
     "gulp-jsdoc": "^0.1.5",
     "gulp-jshint": "^1.11.2",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
-    "gulp-shell": "^0.5.0",
-    "gulp-uglify": "^1.4.2"
+    "gulp-sourcemaps": "^1.6.0"
   }
 }
