--- a/bower.json
+++ b/bower.json
@@ -37,16 +37,16 @@
     "paper-input": "PolymerElements/paper-input#~1.0.10",
     "paper-button": "PolymerElements/paper-button#~1.0.3",
     "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.1",
-    "dude-style": "~0.0.6",
-    "dude-property": "~0.0.9",
+    "dude-style": "~0.0.8",
+    "dude-property": "~0.1.0",
     "dude-collapse": "~0.0.3",
-    "dude-hierarchy": "~0.1.1",
-    "dude-popup": "*"
+    "dude-hierarchy": "~0.1.3",
+    "dude-popup": "~0.0.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
     "iron-localstorage": "PolymerElements/iron-localstorage#~1.0.4",
     "paper-toast": "PolymerElements/paper-toast#~1.0.0",
-    "web-component-tester": "~3.4.0"
+    "web-component-tester": "~4.0.1"
   }
 }
