--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   "devDependencies": {
     "bower": "^1.6.2",
     "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
+    "jshint": "^2.8.0",
+    "gulp-shell": "^0.5.1",
     "gulp-jsdoc": "^0.1.5",
     "gulp-jshint": "^2.0.0",
     "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-shell": "^0.5.1",
-    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
-    "jshint": "^2.8.0"
+    "gulp-concat": "^2.6.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sourcemaps": "^1.6.0"
   }
 }
