--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "bower": "^1.6.2",
     "gulp": "^3.9.0",
+    "jsdoc": "^3.4.0",
     "jshint": "^2.8.0",
     "gulp-shell": "^0.5.1",
     "gulp-jsdoc": "^0.1.5",
