--- a/demo/electron/package.json
+++ b/demo/electron/package.json
@@ -22,5 +22,11 @@
   "homepage": "https://github.com/dudeteam/dude-graph#readme",
   "devDependencies": {
     "electron-prebuilt": "^0.36.0"
+  },
+  "dependencies": {
+    "archiver": "^0.21.0",
+    "jsonfile": "^2.2.3",
+    "lodash": "^3.10.1",
+    "watch": "^0.17.1"
   }
 }
