--- a/bower.json
+++ b/bower.json
@@ -28,25 +28,28 @@
     "README.md"
   ],
   "dependencies": {
-    "d3": "~3.5.7",
-    "lodash": "~3.10.1",
+    "d3": "~3.5.12",
+    "lodash": "~4.0.0",
     "eventEmitter": "~4.3.0",
-    "font-awesome": "~4.4.0",
-    "polymer": "Polymer/polymer#^1.0.0",
-    "iron-input": "PolymerElements/iron-input#~1.0.4",
-    "paper-input": "PolymerElements/paper-input#~1.0.10",
-    "paper-button": "PolymerElements/paper-button#~1.0.3",
+    "font-awesome": "~4.5.0",
+    "polymer": "~1.2.3",
+    "iron-input": "PolymerElements/iron-input#~1.0.8",
+    "paper-input": "PolymerElements/paper-input#~1.1.5",
+    "paper-button": "PolymerElements/paper-button#~1.0.11",
     "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.1",
     "dude-style": "~0.0.8",
-    "dude-property": "~0.1.3",
+    "dude-property": "~0.1.4",
     "dude-collapse": "~0.0.3",
-    "dude-hierarchy": "~0.1.3",
+    "dude-hierarchy": "~0.1.4",
     "dude-popup": "~0.0.1"
   },
   "devDependencies": {
-    "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "iron-localstorage": "PolymerElements/iron-localstorage#~1.0.4",
-    "paper-toast": "PolymerElements/paper-toast#~1.0.0",
-    "web-component-tester": "~4.0.1"
+    "iron-component-page": "PolymerElements/iron-component-page#~1.1.4",
+    "iron-localstorage": "PolymerElements/iron-localstorage#~1.0.5",
+    "paper-toast": "PolymerElements/paper-toast#~1.1.3",
+    "web-component-tester": "~4.1.0"
+  },
+  "resolutions": {
+    "lodash": "~4.0.0"
   }
 }
