--- a/demo/electron/bower.json
+++ b/demo/electron/bower.json
@@ -23,8 +23,8 @@
     ".gitignore"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#~1.2.3",
-    "dude-graph": "~0.4.3",
-    "paper-toast": "PolymerElements/paper-toast#~1.1.1"
+    "polymer": "~1.2.3",
+    "dude-graph": "~0.4.6",
+    "paper-toast": "PolymerElements/paper-toast#~1.1.3"
   }
 }
