--- a/package.json
+++ b/package.json
@@ -13,22 +13,24 @@
     "url": "https://github.com/dudeteam/codegraph/issues"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp",
+    "test": "wct"
   },
   "directories": {
     "test": "tests"
   },
   "devDependencies": {
-    "bower": "^1.6.2",
     "gulp": "^3.9.0",
+    "bower": "^1.6.2",
     "jshint": "^2.8.0",
-    "gulp-shell": "^0.5.1",
-    "gulp-jshint": "^2.0.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-uglify": "^1.5.1",
     "gulp-concat": "^2.6.0",
     "gulp-jsdoc3": "^0.1.1",
+    "gulp-jshint": "^2.0.0",
+    "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp-shell": "^0.5.1",
+    "gulp-uglify": "^1.5.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "web-component-tester": "^4.1.0"
   }
 }
