--- a/bower.json
+++ b/bower.json
@@ -31,17 +31,17 @@
     "d3": "^3.5.14",
     "lodash": "~3.10.1",
     "eventEmitter": "~4.3.0",
-    "font-awesome": "~4.5.0",
     "polymer": "~1.2.3",
     "iron-input": "PolymerElements/iron-input#~1.0.8",
     "paper-input": "PolymerElements/paper-input#~1.1.5",
     "paper-button": "PolymerElements/paper-button#~1.0.11",
     "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.1",
-    "dude-style": "~0.1.1",
+    "dude-style": "~0.1.2",
     "dude-property": "~0.1.6",
     "dude-collapse": "~0.0.3",
     "dude-hierarchy": "~0.1.6",
-    "dude-popup": "~0.0.3"
+    "dude-popup": "~0.0.3",
+    "dude-toolbar": "~0.0.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#~1.1.4",
