--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,7 @@
   ],
   "dependencies": {
     "d3": "^3.5.14",
-    "lodash": "~3.10.1",
+    "lodash": "^4.2.1",
     "eventEmitter": "~4.3.0",
     "polymer": "~1.2.3",
     "iron-input": "PolymerElements/iron-input#~1.0.8",
@@ -47,6 +47,9 @@
     "iron-component-page": "PolymerElements/iron-component-page#~1.1.4",
     "iron-localstorage": "PolymerElements/iron-localstorage#~1.0.5",
     "paper-toast": "PolymerElements/paper-toast#~1.1.3",
-    "web-component-tester": "~4.1.0"
+    "web-component-tester": "^4.2.0"
+  },
+  "resolutions": {
+    "lodash": "^4.2.1"
   }
 }
