--- a/demo/electron/bower.json
+++ b/demo/electron/bower.json
@@ -24,7 +24,7 @@
   ],
   "dependencies": {
     "polymer": "~1.2.3",
-    "dude-graph": "~0.4.6",
+    "dude-graph": "^0.4.8",
     "paper-toast": "PolymerElements/paper-toast#~1.1.3"
   }
 }
