--- a/bower.json
+++ b/bower.json
@@ -41,7 +41,8 @@
     "dude-collapse": "~0.0.3",
     "dude-hierarchy": "^0.1.6",
     "dude-popup": "~0.0.3",
-    "dude-toolbar": "~0.0.1"
+    "dude-toolbar": "~0.0.1",
+    "dude-seed": "dude-sidebar#*"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#~1.1.4",
