--- a/demo/electron/bower.json
+++ b/demo/electron/bower.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "polymer": "~1.2.3",
     "dude-graph": "^0.4.8",
-    "paper-toast": "PolymerElements/paper-toast#~1.1.3"
+    "paper-toast": "PolymerElements/paper-toast#~1.1.3",
+    "dude-toolbar": "^0.0.1"
   }
 }
