--- a/bower.json
+++ b/bower.json
@@ -43,7 +43,8 @@
     "dude-popup": "~0.0.3",
     "dude-toolbar": "~0.0.1",
     "dude-seed": "dude-sidebar#*",
-    "dude-sidebar": "~0.0.1"
+    "dude-sidebar": "~0.0.1",
+    "paper-tabs": "PolymerElements/paper-tabs#~1.3.7"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#~1.1.4",
