--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dudeteam/codegraph.git"
+    "url": "https://github.com/dudeteam/dude-graph.git"
   },
   "bugs": {
-    "url": "https://github.com/dudeteam/codegraph/issues"
+    "url": "https://github.com/dudeteam/dude-graph/issues"
   },
   "scripts": {
     "start": "gulp",
@@ -23,18 +23,18 @@
     "test": "tests"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-shell": "^0.5.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-uglify": "^1.5.3",
-    "gulp-notify": "^2.2.0",
-    "gulp-jsdoc3": "^0.1.1",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sourcemaps": "^1.6.0",
     "bower": "^1.7.7",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-jsdoc3": "^0.1.1",
+    "gulp-jshint": "^2.0.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-shell": "^0.5.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.3",
     "jshint": "^2.9.1",
     "polyserve": "^0.5.0",
-    "web-component-tester": "^4.2.1"
+    "web-component-tester": "^4.2.2"
   }
 }
