--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "polymer": "^1.3.1",
     "iron-flex-layout": "^1.3.1",
     "d3": "^3.5.16",
+    "jwerty": "^0.3.2",
     "lodash": "^4.6.1",
     "eventEmitter": "^4.3.0",
     "dude-style": "^0.1.3",
