--- a/bower.json
+++ b/bower.json
@@ -36,7 +36,8 @@
     "eventEmitter": "^4.3.0",
     "dude-style": "^0.1.3",
     "dude-hierarchy": "^0.1.9",
-    "dude-property": "#feature/dynamic-property"
+    "dude-property": "#feature/dynamic-property",
+    "dude-popup": "^0.0.3"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.1.5",
