--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "dude-graph",
-  "version": "0.4.9",
+  "version": "0.5.0",
   "description": "Generic tool to visually represent a graph of connected blocks. It can be used for unreal-like blueprints, state machines, etc..",
   "main": "dude-graph.js",
   "homepage": "https://github.com/dudeteam/dude-graph",
@@ -28,15 +28,15 @@
     "README.md"
   ],
   "dependencies": {
-    "polymer": "^1.3.1",
+    "polymer": "^1.4.0",
     "iron-flex-layout": "^1.3.1",
     "d3": "^3.5.16",
     "jwerty": "^0.3.2",
     "lodash": "^4.6.1",
     "eventEmitter": "^4.3.0",
     "dude-style": "^0.1.3",
-    "dude-hierarchy": "^0.1.9",
-    "dude-property": "#feature/dynamic-property",
+    "dude-hierarchy": "^0.2.1",
+    "dude-property": "^0.2.0",
     "dude-popup": "^0.0.3"
   },
   "devDependencies": {
