--- a/bower.json
+++ b/bower.json
@@ -37,7 +37,9 @@
     "dude-style": "^0.1.3",
     "dude-hierarchy": "^0.2.1",
     "dude-property": "^0.2.5",
-    "dude-popup": "^0.0.3"
+    "dude-popup": "^0.0.3",
+    "dude-toolbar": "^0.0.2",
+    "dude-collapse": "^0.0.3"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.1.5",
