--- a/bower.json
+++ b/bower.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.1.5",
     "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.5",
+    "paper-toast": "PolymerElements/paper-toast#^1.2.2",
     "web-component-tester": "^4.2.2"
   },
   "resolutions": {
