Added documentation npm run-script

--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   "scripts": {
     "start": "gulp",
     "test": "wct",
-    "release-patch": "bower version patch && npm version --no-git-tag-version patch",
-    "release-minor": "bower version minor && npm version --no-git-tag-version minor",
-    "release-major": "bower version major && npm version --no-git-tag-version major"
+    "documentation": "gulp jsdoc"
   },
   "directories": {
     "test": "tests"
