--- a/bower.json
+++ b/bower.json
@@ -36,10 +36,11 @@
     "eventEmitter": "^4.3.0",
     "dude-style": "^0.1.3",
     "dude-hierarchy": "^0.2.1",
-    "dude-property": "^0.2.6",
+    "dude-property": "^0.2.8",
     "dude-popup": "^0.0.3",
     "dude-toolbar": "^0.0.2",
-    "dude-collapse": "^0.0.3"
+    "dude-collapse": "^0.0.3",
+    "dude-resource-manager": "^0.0.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.1.5",
