--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,7 @@
     "jwerty": "^0.3.2",
     "lodash": "^4.6.1",
     "eventEmitter": "^4.3.0",
-    "dude-style": "^0.1.3",
+    "dude-style": "^0.2.3",
     "dude-popup": "^0.0.3",
     "dude-toolbar": "^0.0.2",
     "dude-collapse": "^0.0.3",
@@ -49,6 +49,7 @@
     "web-component-tester": "^4.2.2"
   },
   "resolutions": {
-    "lodash": "^4.6.1"
+    "lodash": "^4.6.1",
+    "dude-style": "^0.2.3"
   }
 }
